<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome_screen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/delivery_girl"
        android:id="@+id/delivery_girl">

    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/delivery_girl"
        android:id="@+id/logo"
        android:src="@drawable/main_logo">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeScreenText"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:textSize="32sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:id="@+id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/signup"
        android:layout_marginBottom="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_user_sign_in"
            android:textColor="#f16922"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:id="@+id/signup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign_up"
            android:textColor="#f16922"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</RelativeLayout>